updated iframe: loading="lazy"

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-a05ed48 elementor-widget__width-inherit elementor-widget elementor-widget-html" data-id="a05ed48" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
-			<iframe class="rounded-iframe" src="https://yumenoki.github.io/WebGL-Portfolio/" sandbox="allow-scripts allow-same-origin" name="3D" scrolling="no" allowfullscreen="allowfullscreen"></iframe>
+			<iframe class="rounded-iframe" src="https://yumenoki.github.io/WebGL-Portfolio/" loading="lazy" sandbox="allow-scripts allow-same-origin" name="3D" scrolling="no" allowfullscreen="allowfullscreen"></iframe>
 
 <style>.rounded-iframe {
         border: 0px solid #ccc; /* Border color and thickness */
